<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_name_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.benvc.quizbuilder.nameScreen"
    android:background="@android:color/holo_blue_bright">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:id="@+id/txtName"
        android:background="@android:color/darker_gray"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_below="@+id/tvEnterName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnContinue"
        android:layout_height="wrap_content"
        android:id="@+id/btnContinue"
        android:elevation="0dp"
        android:layout_width="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:drawable/screen_background_dark"
        android:layout_below="@+id/tvContinue"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvName"
        android:id="@+id/tvEnterName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvContinue"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
